src/objects/Benefit_Configuration__c.object
<CustomObject>
    <description>Used for SAE users to group benefits by category code and/or specialty keyword (US2368218)</description>
    <fields>
        <fullName>BenefitConfigurationExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BenefitConfigurationExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Benefit_Code_Description_API__c</fullName>
        <description>Used to store the camel case description for HIPAA codes (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Code Description (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Code_Description_UI__c</fullName>
        <description>Used to story the benefit code description that will be on the UI (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Code Description (UI)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Code_Type__c</fullName>
        <description>Used to determine what type of code is listed in benefit code field (US2368218)</description>
        <label>Benefit Code Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Code</fullName>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Code__c</fullName>
        <description>Used for HIPAA or Benefit Codes (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Grouping_Type__c</fullName>
        <description>Used to determine what type of configuration record is for (US2368218)</description>
        <label>Benefit Grouping Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Code</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Keyword__c</fullName>
        <description>Used to define the drop down value for Category search (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to define the drop down value for Category search</inlineHelpText>
        <label>Category Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDB_Code__c</fullName>
        <description>Used to define the provider specialty (by NDB code) the benefit is to display under (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NDB Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Keyword__c</fullName>
        <description>Used to define the drop down value for Specialty search (US2368218)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to define the drop down value for Specialty</inlineHelpText>
        <label>Specialty Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Benefit Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Benefit_Grouping_Type__c</columns>
        <columns>Benefit_Code_Type__c</columns>
        <columns>Benefit_Code__c</columns>
        <columns>Benefit_Code_Description_API__c</columns>
        <columns>Benefit_Code_Description_UI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BEN-{00000}</displayFormat>
        <label>Benefit Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_Reqd</fullName>
        <active>true</active>
        <description>Ensures that a Category Keyword is entered if Category is included in Benefit Group Type</description>
        <errorConditionFormula>AND(
INCLUDES(Benefit_Grouping_Type__c , &quot;Category&quot;),
ISBLANK(  Category_Keyword__c  )
)</errorConditionFormula>
        <errorDisplayField>Category_Keyword__c</errorDisplayField>
        <errorMessage>Category field must be filled out for Category grouping type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specialty_Reqd</fullName>
        <active>true</active>
        <description>Ensures that a Specialty Keyword is entered if Specialty is included in Benefit Group Type</description>
        <errorConditionFormula>AND(
INCLUDES(Benefit_Grouping_Type__c , &quot;Specialty&quot;),
ISBLANK(  Specialty_Keyword__c  )
)</errorConditionFormula>
        <errorDisplayField>Specialty_Keyword__c</errorDisplayField>
        <errorMessage>NDB Code and Specialty fields must be filled out for Specialty grouping type</errorMessage>
    </validationRules>
</CustomObject>